--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pixi/react": "^7.1.2",
+    "pixi.js": "^8.6.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
